<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setorSampah.SetorSampahActivity"
    android:background="@color/neutral0"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="165dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubah_sampah_jadi_berkah"
            android:fontFamily="@font/poppinsbold"
            android:textSize="24sp"
            android:textColor="@color/primary100"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/penyetoran"
            android:textAppearance="@style/heading2_bold"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/neutral80"/>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/select"-->
<!--            android:background="@drawable/bg_custom_input"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">-->
<!--            <AutoCompleteTextView-->
<!--                android:id="@+id/auto_complete_txt"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="none"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <Spinner
            android:id="@+id/jenisPenyetoranSpinner"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_custom_input"
            style="@style/body2_regular"
            android:padding="10dp" />

        <Button
            android:id="@+id/lanjutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/bg_rectangle_primary"
            android:layout_marginTop="32dp"
            android:text="@string/lanjut"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:textColor="@color/neutral0"/>


    </LinearLayout>

</LinearLayout>