<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary100"
    android:layout_marginBottom="32dp"
    tools:context=".help.HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hello_faq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/heading1_bold"
                    android:textColor="@color/neutral0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/username"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/heading1_bold"
                    android:textColor="@color/neutral0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hello"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textAlignment="viewStart"
                android:textAppearance="@style/heading1_bold"
                android:textColor="@color/neutral0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hello_faq"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/help_descrpition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/help_desc"
                android:textAlignment="viewStart"
                android:textAppearance="@style/heading3_regular"
                android:textColor="@color/neutral0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_searchbar"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/help_descrpition"
                app:queryHint="Coba cari “cara memilah sampah?"
                app:searchIcon="@drawable/ic_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_roundedtop_rectangle_white"
            app:layout_constraintTop_toBottomOf="@+id/header_faq">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/heading3_semibold"
                    android:textColor="@color/neutral80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_faq">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_faq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/title_faq"
                        tools:listitem="@layout/list_faq" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_faq">

                <TextView
                    android:id="@+id/title_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_title"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/heading3_semibold"
                    android:textColor="@color/neutral80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_help">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/contact"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ImageContrastCheck" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_kontak"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kontak_title"
                            android:textAppearance="@style/heading4_regular"
                            android:textColor="@color/neutral80"
                            app:layout_constraintBottom_toTopOf="@+id/tv_banksampah"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_banksampah"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/banksampah"
                            android:textAppearance="@style/heading3_bold"
                            android:textColor="@color/primary100"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_kontak" />

                        <LinearLayout
                            android:id="@+id/alamat_bps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:clickable="true"
                            app:layout_constraintTop_toBottomOf="@+id/tv_banksampah">

                            <ImageView
                                android:id="@+id/ic_map"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_map" />

                            <TextView
                                android:id="@+id/tv_alamatbps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/alamat"
                                android:textAppearance="@style/smalltext_regular"
                                android:textColor="@color/neutral80" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/telp_bps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:clickable="true"
                            app:layout_constraintTop_toBottomOf="@+id/alamat_bps">

                            <ImageView
                                android:id="@+id/ic_phone"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_phone" />

                            <TextView
                                android:id="@+id/tv_telpbps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/telp"
                                android:textAppearance="@style/smalltext_regular"
                                android:textColor="@color/neutral80" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/mail_bps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:clickable="true"
                            app:layout_constraintTop_toBottomOf="@+id/telp_bps">

                            <ImageView
                                android:id="@+id/ic_mail"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_mail" />

                            <TextView
                                android:id="@+id/tv_mailpbps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/email"
                                android:textAppearance="@style/smalltext_regular"
                                android:textColor="@color/neutral80" />
                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>